# openclaw-drug

./: .gitignore  Makefile  README.md  README_CN.md  navigator_api_keys.example.json  pyproject.toml  requirements-light.txt  requirements-sota.txt  requirements.txt  skill.yaml
.vercel/: project.json
docs/: PUBLIC_LITERATURE_DATASETS.md
drugclaw/: __init__.py  cli.py  config.py  main_system.py
drugclaw/agent/: code_agent.py  planner.py  responder.py
drugclaw/kg/: graph_builder.py  reasoner.py
drugclaw/rag/: literature_rag.py
drugclaw/virtual_screening/: __init__.py  batch_parallel.py
scripts/: build_chembl_kg.py  build_knowledge_graph.py  download_public_datasets.py  import_pdfs_to_rag.py  install_system_deps.sh
skills/ddi/ddinter/: SKILL.md  example.py  retrieve.py
skills/dti/chembl/: SKILL.md  chembl_skill.py  example.py  retrieve.py
skills/knowledgebase/drugbank/: SKILL.md  example.py  retrieve.py
skills/pgx/pharmgkb/: SKILL.md  example.py
skills/screening/autodock_vina/: retrieve.py
