[project]
name = "drugclaw"
version = "0.1.0"
authors = [
  { name="DrugClaw Contributors", email="contributor@drugclaw.ai" }
]
description = "AI-powered drug discovery assistant based on OpenClaw"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Artificial Intelligence"
]
keywords = [
    "drug-discovery",
    "cheminformatics",
    "virtual-screening",
    "admet-prediction",
    "ai",
    "openclaw"
]
dependencies = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "rdkit>=2022.09.1",
    "supabase>=2.0.0",
    "flask>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "transformers>=4.30.0",
    "torch>=2.0.0"
]

[project.scripts]
drugclaw = "drugclaw.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
